--- a/1806/appsettings.json
+++ b/1806/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=8080;Database=db;Username=postgres;Password=admin;"
+    "DefaultConnection": "Host=localhost;Port=8080;Database=postgres;Username=postgres;Password=admin;"
   },
   "Logging": {
     "LogLevel": {
